--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/geolocation": "^6.2.0",
-    "@capacitor/android": "^4.3.0",
+    "@capacitor-community/barcode-scanner": "^3.0.1",
+    "@capacitor/android": "^4.6.1",
     "@capacitor/app": "4.0.1",
     "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "4.3.0",
@@ -29,9 +30,12 @@
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
+    "@types/cordova": "^0.0.34",
     "cordova-plugin-geolocation": "^4.1.0",
     "firebase": "^9.14.0",
     "ionicons": "^6.0.3",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
